# uma-app

./: .gitignore  CLAUDE.md  CONTEXT.md  bubble.html  components.json  devtools.html  index.html  package.json  permission-bubble.html  pet-bubble.html  pet-hit.html  pet.html  robot.html  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
docs/: events.manifest.json
docs/adr/: 0001-canonical-hook-events.md  0002-in-process-agent-adapter.md  0003-always-allow-scope.md  0004-per-file-hitbox.md  0005-dev-tools.md  0006-adopt-xstate-for-display-state-resolver.md  0007-one-shot-silent-ingest.md  0008-subagent-flag-canonical.md  0009-session-key-upgrade-path.md  0010-idle-to-sleep-delay.md  0011-permission-kind-and-update-entries.md  0012-devtools-in-main-window.md  0013-dynamic-island-permission-bubble.md  0014-tray-anchored-popover-bubble.md  0015-bubble-optimization-grilling.md  0016-drop-preset-wind4.md  0017-bubble-reply-strategy-by-hook-kind.md
hooks/: claude-hook.js
public/themes/calico/: theme.json
public/themes/uma/: theme.json
scripts/: migrate-theme-states.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent.rs  commands.rs  devtools.rs  events.rs  focus_restore.rs  hook_installer.rs  http_server.rs  lib.rs  main.rs  pending_store.rs  settings_store.rs  theme_io.rs  tray.rs  windows.rs
src-tauri/src/adapters/: claude_code.rs  mod.rs
src/bubble/: AskBubble.vue  AskPanelContent.vue  BubbleApp.vue  BubbleIdle.vue  BubblePill.vue  BubbleShellRoot.vue  CommandBlock.vue  ElicitationBody.vue  ElicitationBubble.vue  PanelLayout.vue  PanelShell.test.ts  PanelShell.vue  PillLayout.vue  PillShell.test.ts  PillShell.vue  PillToast.vue  PlanBody.vue  PlanBubble.vue  PlanPanelContent.vue  PlanReviewBubble.vue  SideEffectBubble.vue  SuggestionList.vue  ToolBubble.vue  ToolPillContent.test.ts  ToolPillContent.vue  UnifiedBubbleCard.test.ts  UnifiedBubbleCard.vue  agent-icons.ts  format-detail.ts  format-side-effect.ts  lang.ts  main.ts  strings.ts  suggestion-label.ts  types.ts
src/bubble/__snapshots__/: PanelShell.test.ts.snap  PillShell.test.ts.snap  ToolPillContent.test.ts.snap  UnifiedBubbleCard.test.ts.snap
src/bubble/composables/: useToolColor.test.ts  useToolColor.ts
src/bubble/utils/: sessionShortId.ts
src/components/: Badge.vue  Btn.vue  Card.vue  CardContent.vue  Input.vue  Label.vue  ModeToggle.vue  SelectContent.vue  SelectItem.vue  SelectScrollButton.vue  SelectTrigger.vue  SelectViewport.vue  Separator.vue  Switch.vue  TabsContent.vue  TabsRoot.vue  Textarea.vue  TooltipArrow.vue  TooltipContent.vue
src/components/bubble/: BubbleHeader.vue
src/components/sidebar/: Sidebar.vue  SidebarContent.vue  SidebarFooter.vue  SidebarGroup.vue  SidebarGroupAction.vue  SidebarGroupContent.vue  SidebarGroupLabel.vue  SidebarHeader.vue  SidebarInput.vue  SidebarInset.vue  SidebarMenu.vue  SidebarMenuAction.vue  SidebarMenuBadge.vue  SidebarMenuButton.vue  SidebarMenuButtonChild.vue  SidebarMenuItem.vue  SidebarMenuSkeleton.vue  SidebarMenuSub.vue  SidebarMenuSubButton.vue  SidebarMenuSubItem.vue  SidebarProvider.vue  SidebarRail.vue  SidebarSeparator.vue  SidebarTrigger.vue  index.ts
src/components/ui/radio-group/: RadioGroup.vue  RadioGroupWithOptions.vue
src/components/ui/sonner/: Sonner.vue  index.ts
src/components/ui/switch/: Switch.vue
src/components/ui/tooltip/: Tooltip.vue  TooltipWrapper.vue
src/composables/: useSettings.ts  useTauriEvents.ts
src/devtools/: DevToolsApp.vue  main.ts
src/devtools/panels/: EventLogPanel.vue  StateMachinePanel.vue  StoresPanel.test.ts  StoresPanel.vue  SyntheticFirePanel.vue  ThemeEditorPanel.vue  VisualDebugPanel.vue
src/i18n/: coverage.test.ts  i18n.d.ts  index.ts  testing.ts  useAppLocale.ts
src/i18n/locales/: en.json  zh.json
src/permission/: bubble-policy-keys.test.ts  bubble-policy.test.ts  bubble-policy.ts  passthrough.test.ts  pure.ts  registry-pure.ts  registry.test.ts  registry.ts  suggest-normalize.test.ts
src/permission/__test__/: index.ts
src/pet/: PetRoot.vue  pet-machine-constants.ts  pet-machine-types.ts  pet-machine.ts  state-machine.d.ts  state-machine.js  theme-manager.js
src/robot/: RobotRoot.vue  Sprite.test.ts  Sprite.vue  dev-listeners.ts  display-state-constants.ts  display-state-resolver.ts  display-state-types.ts  entry.ts  main.ts  theme-manager.d.ts  theme-manager.js
src/robot/composables/: useDisplayState.ts  useRobotAudio.ts  useRobotEvents.ts  useRobotWindow.ts  useThemeAssets.ts
src/robot/display-state-resolver/: index.ts  machine.test.ts  machine.ts  pure.test.ts  pure.ts
src/styles/: bubble-tokens.css  bubble.css  main.css  robot.css  shared.css  shortcuts.css
src/types/: events.test.ts  events.ts  permission.ts  settings.ts
themes/uma/: theme.json
(+1 files in other folders)
