[package]
name = "uma-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only a Tauri issue, see https://github.com/rust-lang/cargo/issues/8519
name = "uma_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = "0.7"
tower = "0.4"

# Dev-tools commands (`devtools_get_pending`, `devtools_fire_synthetic_permission`,
# `theme_load`, `theme_save`) and the dev-only Tauri event emits are gated by
# `#[cfg(debug_assertions)]` — auto-enabled in `cargo build` (dev profile) and
# auto-disabled in `cargo build --release`. No Cargo feature to maintain.