[package]
name = "uma-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only a Tauri issue, see https://github.com/rust-lang/cargo/issues/8519
name = "uma_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
# Prevent duplicate processes: when the user (or a stale dev launch)
# triggers a second instance, this plugin closes the newcomer and
# hands its argv + cwd to the original process via a callback.
tauri-plugin-single-instance = "2"
# Unified Rust/frontend logger. Stdout for live dev tail, LogDir for
# production post-mortem (file in app's logs/ dir).
tauri-plugin-log = { version = "2", features = ["colored"] }
# log macros used by app code (Info/Warn/Error); consumed by tauri-plugin-log
log = "0.4"
# Dev-only: enables `mcp___hypothesi_tauri-mcp-server__*` tools
# (screenshots, DOM snapshots, IPC captures) for the running app.
# Auto-disabled in release builds via cfg(debug_assertions) on the
# plugin registration in lib.rs.
tauri-plugin-mcp-bridge = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = "0.8"
# tower-http is intentionally pinned explicitly: PR2 will use
# OnEarlyDropLayer + SetRequestIdLayer (stable since tower-http 0.6.9).
# Features unused in PR1 — listed now so PR2's diff is dep-only.
tower-http = { version = "0.7", features = ["on-early-drop", "request-id", "util"] }

# Dev-tools commands (`devtools_get_pending`, `devtools_fire_synthetic_permission`,
# `theme_load`, `theme_save`) and the dev-only Tauri event emits are gated by
# `#[cfg(debug_assertions)]` — auto-enabled in `cargo build` (dev profile) and
# auto-disabled in `cargo build --release`. No Cargo feature to maintain.